# swagger_ui_bundle

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  release.yml  scorecard.yml  test.yml  tests.yml
py_swagger_ui/: __init__.py
swagger_ui_bundle/: __init__.py
tests/: test_can_import.py
