[tool.poetry]
name = "swagger_ui_bundle"
version = '1.0.0'
description = "Swagger UI bundled for usage with Python"
readme = "README.rst"
keywords = ["swagger-ui"]
license = "Apache-2.0"
authors = ["Daniel Grossmann-Kavanagh"]
maintainers = ["Robbe Sneyders <robbe.sneyders@gmail.com>"]
repository = "https://github.com/spec-first/swagger_ui_bundle"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8"
Jinja2 = "^3.0.0"
importlib_resources = { version = "^5.7.1", python = "<3.9" }

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
